feat(process-svc): Add endpoints for creating harvests
